[workspace]
members = ["bin/ethproofs-client", "bin/input-gen-server", "ethproofs-common"]
exclude = []
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
alloy-provider = { version = "1.7.3", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
allow-evm = { version = "=0.27.2", default-features = false }
anyhow = "1.0.97"
base64 = "0.22.1"
bincode = "1.3.3"
chrono = "0.4"
clap = { version = "4.5.21", features = ["derive"] }
dotenv = "0.15.0"
flate2 = "1.0.0"
futures-util = "0.3"
env_logger = "0.11.5"
ethers = { version = "2.0.14", features = ["ws"] }
ethers-core = { version = "2.0.14", features = ["serde"] }
log = "0.4.26"
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["json"] }
tar = "0.4.44"
tokio = { version = "1.44.0", features = ["full"] }
tokio-tungstenite = "0.21"
url = "2.5.4"
# input = { git = "https://github.com/0xPolygonHermez/zisk-eth-client.git", branch = "feat/stream" }
input = { path = "../zisk-eth-client/crates/input" }
# guest = { git = "https://github.com/0xPolygonHermez/zisk-eth-client.git", branch = "feat/stream" }
guest-reth = { path = "../zisk-eth-client/crates/guest-reth" }

[patch.crates-io]
# Needed for deterministic Hashmap sort
alloy-evm = { git = "https://github.com/0xPolygonHermez/zisk-patch-alloy-evm.git", branch = "zisk-hints/v0.27.3" }
# alloy-evm = { path = "../../../zisk-patch-alloy-evm/crates/evm" }

# TODO: This can be removed when a new version of reth is released
[patch."https://github.com/paradigmxyz/reth.git"]
# Needed for deterministic Hashmap sort
reth-trie-common = { git = "https://github.com/0xPolygonHermez/zisk-patch-reth.git", branch = "zisk-hints/v1.11.0" }
# reth-trie-common = { path = "../../../zisk-patch-reth/crates/trie/common" }

[patch."https://github.com/eth-act/zkvm-ethereum-mpt.git"]
# Needed for deterministic Hashmap sort
zeth-mpt-state = { git = "https://github.com/0xPolygonHermez/zisk-patch-zkvm-ethereum-mpt.git", branch = "zisk-hints/v0.5.0" }
# zeth-mpt-state = { path = "../../../zisk-patch-zkvm-ethereum-mpt/crates/zeth-mpt-state" }

[patch."https://github.com/paradigmxyz/stateless.git"]
# Needed for function visibility
stateless = { git = "https://github.com/0xPolygonHermez/zisk-patch-stateless.git", branch = "zisk/68cd8e73" }
# stateless = { path = "../zisk-patch-stateless/crates/stateless" }
