[package]
name = "zisk-ethproofs"
version = "0.1.0"
edition = "2021"
description = ""

[dependencies]
alloy-provider = { version = "1.7.3", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-evm = { version = "=0.27.3", default-features = false }
anyhow = "1.0.97"
base64 = "0.22.1"
bincode = "1.3.3"
chrono = "0.4"
clap = { version = "4.5.21", features = ["derive"] }
dotenv = "0.15.0"
flate2 = "1.0.0"
futures-util = "0.3"
env_logger = "0.11.5"
ethers = { version = "2.0.14", features = ["ws"] }
log = "0.4.26"
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["json"] }
tar = "0.4.44"
tokio = { version = "1.44.0", features = ["full"] }
tokio-tungstenite = "0.21"
url = "2.5.4"
lazy_static = "1.4"
axum = { version = "0.7", features = ["macros", "json"] }
bytemuck = "1.24.0"
prometheus = "0.14"
serde = "1.0.219"
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "macros", "tls-rustls"] }
tonic = "0.14"
zstd = "0.13.3"
regex = "1.12.2"

# zisk-eth-client dependencies
input = { git = "https://github.com/0xPolygonHermez/zisk-eth-client.git", tag = "v0.7.0" }
# input = { path = "../zisk-eth-client/crates/input" }
guest-reth = { git = "https://github.com/0xPolygonHermez/zisk-eth-client.git", tag = "v0.7.0" }
# guest-reth = { path = "../zisk-eth-client/crates/guest-reth" }

# zisk dependencies
zisk-distributed-common = { git = "https://github.com/0xPolygonHermez/zisk.git", tag = "v0.16.0" }
zisk-common = { git = "https://github.com/0xPolygonHermez/zisk.git", tag = "v0.16.0" }
zisk-distributed-grpc-api = { git = "https://github.com/0xPolygonHermez/zisk.git", tag = "v0.16.0" }
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git", tag = "v0.16.0" }
zisk-sdk = { git = "https://github.com/0xPolygonHermez/zisk.git", tag = "v0.16.0" }
# Local development
# zisk-distributed-common = { path = "../zisk/distributed/crates/common" }
# zisk-common = { path = "../zisk/common" }
# zisk-distributed-grpc-api = { path = "../zisk/distributed/crates/grpc-api" }
# ziskos = { path = "../zisk/ziskos/entrypoint" }
# zisk-sdk = { path = "../zisk/sdk" }

[target.'cfg(zisk_hints)'.dependencies]
alloy-primitives = { version = "1.5.6", default-features = false, features = ["native-keccak"] }
alloy-consensus = { version = "1.7.3", default-features = false, features = ["crypto-backend"] }
revm = { version = "34.0.0", default-features = false }

[patch.crates-io]
# Needed for deterministic Hashmap sort
alloy-evm = { git = "https://github.com/0xPolygonHermez/zisk-patch-alloy-evm.git", branch = "zisk-hints/v0.27.3" }
# alloy-evm = { path = "../../../zisk-patch-alloy-evm/crates/evm" }

# TODO: This can be removed when a new version of reth is released
[patch."https://github.com/paradigmxyz/reth.git"]
# Needed for deterministic Hashmap sort
reth-trie-common = { git = "https://github.com/0xPolygonHermez/zisk-patch-reth.git", branch = "zisk-hints/v1.11.0" }
# reth-trie-common = { path = "../../../zisk-patch-reth/crates/trie/common" }

[patch."https://github.com/eth-act/zkvm-ethereum-mpt.git"]
# Needed for deterministic Hashmap sort
zeth-mpt-state = { git = "https://github.com/0xPolygonHermez/zisk-patch-zkvm-ethereum-mpt.git", branch = "zisk-hints/v0.5.0" }
# zeth-mpt-state = { path = "../../../zisk-patch-zkvm-ethereum-mpt/crates/zeth-mpt-state" }

[patch."https://github.com/paradigmxyz/stateless.git"]
# Needed for function visibility
stateless = { git = "https://github.com/0xPolygonHermez/zisk-patch-stateless.git", branch = "zisk/68cd8e73" }
# stateless = { path = "../zisk-patch-stateless/crates/stateless" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_vendor, values("zisk"))', 'cfg(zisk_hints)', 'cfg(zisk_hints_debug)'] }