[package]
name = "ethproofs-protocol"
version = "0.1.0"
edition = "2021"
authors = ["zisk-ethproofs <dev@polygon.technology>"]
description = "Shared protocol types for ethproofs client and input generator"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
